# qwen-asr-onnx

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
examples/qwen-asr-a733/: config.yaml
examples/qwen-asr-onnx/: config.yaml
scripts/: docker_run.sh  upload_model_to_internal_hf.py
src/qwen_asr_a733/commands/: app.py  utils.py
src/qwen_asr_a733/configs/: __init__.py  constants.py  runtime.py
src/qwen_asr_a733/inferencers/: __init__.py  grpc_inferencer.py  onnx.py
src/qwen_asr_a733/protos/asr/: ux_speech.proto  ux_speech_pb2.py  ux_speech_pb2_grpc.py  ux_speech_pb2_grpc.pyi
src/qwen_asr_a733/servicer/: __init__.py  servicer.py
src/qwen_asr_onnx/commands/: app.py  utils.py
src/qwen_asr_onnx/configs/: __init__.py  runtime.py
src/qwen_asr_onnx/inferencers/: __init__.py  grpc_inferencer.py  language.py  onnx.py
src/qwen_asr_onnx/inferencers/text/: __init__.py  asr_output.py  transcript_parser.py
src/qwen_asr_onnx/protos/asr/: ux_speech_pb2.pyi  ux_speech_pb2_grpc.py  ux_speech_pb2_grpc.pyi
src/qwen_asr_onnx/servicer/: servicer.py
tests/: demo_stream.py  test_transcript_parser.py
